prevent sidebar menu horizontal overflow

--- a/packages/app/src/containers/navigation/Sidebar.module.less
+++ b/packages/app/src/containers/navigation/Sidebar.module.less
@@ -75,7 +75,7 @@
 
 .orgnav {
   background-color: hsl(230, 14%, 11%);
-  width: 225px;
+  width: 220px;
   max-height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
