--- a/packages/app/src/containers/navigation/menus/Menu.module.less
+++ b/packages/app/src/containers/navigation/menus/Menu.module.less
@@ -25,6 +25,7 @@
 
     .ant-menu-sub.ant-menu-inline {
       background: unset;
+      width: unset;
       margin-left: 22px;
       padding-left: 1px;
       border-left: 1px solid @border-color-base;
